指摘箇所を修正

--- a/php-book-app/css/style.css
+++ b/php-book-app/css/style.css
@@ -81,18 +81,18 @@ footer {
 }
 
 /* read.php */
-.products {
+.books {
     box-sizing: border-box;
     min-height: calc(100vh - 7rem);
     padding: 1.75rem 0 3.5rem;
 }
 
-.products h1 {
+.books h1 {
     margin: 0 0 1.75rem;
     font-size: 1.75rem;
 }
 
-.products-ui {
+.books-ui {
     display: flex;
     align-items: flex-end;
     justify-content: space-between;
@@ -100,18 +100,18 @@ footer {
     margin-bottom: 1.5rem;
 }
 
-.products-ui div {
+.books-ui div {
     display: flex;
     align-items: flex-end;
 }
 
 @media (max-width: 959px) {
-    .products-ui {
+    .books-ui {
         flex-direction: column;
         align-items: center;
     }
 
-    .products-ui div {
+    .books-ui div {
         margin-bottom: 1.5rem;
     }
 }
@@ -134,29 +134,29 @@ footer {
     border: none;
 }
 
-.products-table {
+.books-table {
     width: 100%;
     margin: 0 auto;
     word-break: break-all;
     border-collapse: collapse;
 }
 
-.products-table tr {
+.books-table tr {
     border-bottom: solid 1px #d9d9d9;
 }
 
-.products-table tr:first-child { 
+.books-table tr:first-child { 
     border-bottom: solid 3px #d9d9d9;
 }
 
-.products-table th,
-.products-table td {
+.books-table th,
+.books-table td {
     padding: 1rem 0.75rem 1rem 0;
     text-align: center;
 }
 
-.products-table th:first-child,
-.products-table td:first-child {
+.books-table th:first-child,
+.books-table td:first-child {
     padding:1rem 0.75rem;
     text-align: center;
 }
